# Hjj

./: .env.example  .replit  API_SPEC.md  README.md  UI_DESIGN_SPEC.md  database.py  main.py  pyproject.toml  render.yaml  replit.md  requirements.txt
attached_assets/: Pasted-GET-HTTP-1-1-200-OK-INFO-102-88-115-14-0-GET-HTTP-1-1-200-OK-INFO-102-88-115-14-0-1759745418678_1759745418678.txt
static/: index.html
